src/runtime/zig/lean_rt.zig

pub extern fn lean_scalar_to_int64(_0: LeanObj) callconv(.c) u64;
pub extern fn lean_set_exit_on_panic(_0: bool) callconv(.c) void;
pub extern fn lean_set_external_data(_0: LeanObj, _1: ?*anyopaque) callconv(.c) LeanObj;
pub extern fn lean_set_max_heartbeat(_0: usize) callconv(.c) void;
pub extern fn lean_set_max_heartbeat_thousands(_0: c_uint) callconv(.c) void;
pub extern fn lean_set_max_memory(_0: usize) callconv(.c) void;
pub extern fn lean_set_max_memory_megabyte(_0: c_uint) callconv(.c) void;
pub extern fn lean_set_non_heap_header(_0: LeanObj, _1: usize, _2: c_uint, _3: c_uint) callconv(.c) void;
pub extern fn lean_set_non_heap_header_for_big(_0: LeanObj, _1: c_uint, _2: c_uint) callconv(.c) void;
pub extern fn lean_set_panic_messages(_0: bool) callconv(.c) void;
pub extern fn lean_setup_args(_0: c_int, _1: [*c][*c]u8) callconv(.c) [*c][*c]u8;
pub extern fn lean_sharecommon_eq(_0: LeanObj, _1: LeanObj) callconv(.c) u8;
pub extern fn lean_sharecommon_hash(_0: LeanObj) callconv(.c) u64;
pub extern fn lean_sharecommon_quick(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_sleep_for(_0: c_uint, _1: c_uint) callconv(.c) void;
pub extern fn lean_slice_dec_lt(_0: LeanObj, _1: LeanObj) callconv(.c) u8;
pub extern fn lean_slice_hash(_0: LeanObj) callconv(.c) u64;
pub extern fn lean_small_mem_size(_0: ?*anyopaque) callconv(.c) c_uint;
pub extern fn lean_small_object_size(_0: LeanObj) callconv(.c) c_uint;
pub extern fn lean_sorry(_0: u8) callconv(.c) LeanObj;
pub extern fn lean_st_mk_ref(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_st_ref_get(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_st_ref_ptr_eq(_0: LeanObj, _1: LeanObj) callconv(.c) u8;
pub extern fn lean_st_ref_reset(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_st_ref_set(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_st_ref_swap(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_st_ref_take(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_state_sharecommon(_0: LeanObj, _1: LeanObj, _2: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_strict_and(_0: u8, _1: u8) callconv(.c) u8;
pub extern fn lean_strict_or(_0: u8, _1: u8) callconv(.c) u8;
pub extern fn lean_string_any(_0: LeanObj, _1: LeanObj) callconv(.c) u8;
pub extern fn lean_string_append(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_string_byte_size(_0: LeanObj) callconv(.c) usize;
pub extern fn lean_string_capacity(_0: LeanObj) callconv(.c) usize;
pub extern fn lean_string_capitalize(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_string_compare(_0: LeanObj, _1: LeanObj) callconv(.c) u8;
pub extern fn lean_string_contains(_0: LeanObj, _1: u32) callconv(.c) u8;
pub extern fn lean_string_cstr(_0: LeanObj) callconv(.c) ?*anyopaque;
pub extern fn lean_string_data(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_string_data_byte_size(_0: LeanObj) callconv(.c) usize;
pub extern fn lean_string_drop(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_string_dropright(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_string_eq(_0: LeanObj, _1: LeanObj) callconv(.c) bool;
pub extern fn lean_string_eq_cold(_0: LeanObj, _1: LeanObj) callconv(.c) bool;
pub extern fn lean_string_foldl(_0: LeanObj, _1: LeanObj, _2: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_string_from_utf8_unchecked(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_string_front(_0: LeanObj) callconv(.c) u32;
pub extern fn lean_string_hash(_0: LeanObj) callconv(.c) u64;
pub extern fn lean_string_intercalate(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_string_isempty(_0: LeanObj) callconv(.c) u8;
pub extern fn lean_string_isprefixof(_0: LeanObj, _1: LeanObj) callconv(.c) u8;
pub extern fn lean_string_len(_0: LeanObj) callconv(.c) usize;
pub extern fn lean_string_lt(_0: LeanObj, _1: LeanObj) callconv(.c) bool;
pub extern fn lean_string_memcmp(_0: LeanObj, _1: LeanObj, _2: LeanObj, _3: LeanObj, _4: LeanObj) callconv(.c) u8;
pub extern fn lean_string_mk(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_string_ne(_0: LeanObj, _1: LeanObj) callconv(.c) bool;
pub extern fn lean_string_nextwhile(_0: LeanObj, _1: LeanObj, _2: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_string_of_usize(_0: usize) callconv(.c) LeanObj;
pub extern fn lean_string_offsetofpos(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_string_pos_min(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_string_pos_sub(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_string_posof(_0: LeanObj, _1: u32) callconv(.c) LeanObj;
pub extern fn lean_string_push(_0: LeanObj, _1: u32) callconv(.c) LeanObj;
pub extern fn lean_string_pushn(_0: LeanObj, _1: u32, _2: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_string_to_utf8(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_string_trim(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_string_utf8_extract(_0: LeanObj, _1: LeanObj, _2: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_string_utf8_get(_0: LeanObj, _1: LeanObj) callconv(.c) u32;
pub extern fn lean_string_utf8_get_bang(_0: LeanObj, _1: LeanObj) callconv(.c) u32;
pub extern fn lean_string_utf8_get_fast_cold(_0: [*:0]const u8, _1: usize, _2: usize, _3: u8) callconv(.c) u32;
pub extern fn lean_string_utf8_get_opt(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_string_utf8_next(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_string_utf8_next_fast_cold(_0: usize, _1: u8) callconv(.c) LeanObj;
pub extern fn lean_string_utf8_prev(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_string_utf8_set(_0: LeanObj, _1: LeanObj, _2: u32) callconv(.c) LeanObj;
pub extern fn lean_string_validate_utf8(_0: LeanObj) callconv(.c) u8;
pub extern fn lean_substring_all(_0: LeanObj, _1: LeanObj) callconv(.c) u8;
pub extern fn lean_substring_beq(_0: LeanObj, _1: LeanObj) callconv(.c) u8;
pub extern fn lean_substring_drop(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_substring_extract(_0: LeanObj, _1: LeanObj, _2: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_substring_front(_0: LeanObj) callconv(.c) u32;
pub extern fn lean_substring_get(_0: LeanObj, _1: LeanObj) callconv(.c) u32;
pub extern fn lean_substring_isempty(_0: LeanObj) callconv(.c) u8;
pub extern fn lean_substring_prev(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_substring_takewhile(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_substring_tostring(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_system_platform_emscripten(_0: LeanObj) callconv(.c) u8;
pub extern fn lean_system_platform_nbits(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_system_platform_osx(_0: LeanObj) callconv(.c) u8;
pub extern fn lean_system_platform_target(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_system_platform_windows(_0: LeanObj) callconv(.c) u8;
pub extern fn lean_task_bind(_0: LeanObj, _1: LeanObj, _2: LeanObj, _3: u8) callconv(.c) LeanObj;
pub extern fn lean_task_bind_core(_0: LeanObj, _1: LeanObj, _2: c_uint, _3: bool, _4: bool) callconv(.c) LeanObj;
pub extern fn lean_task_get(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_task_get_own(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_task_map(_0: LeanObj, _1: LeanObj, _2: LeanObj, _3: u8) callconv(.c) LeanObj;
pub extern fn lean_task_map_core(_0: LeanObj, _1: LeanObj, _2: c_uint, _3: bool, _4: bool) callconv(.c) LeanObj;
pub extern fn lean_task_pure(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_task_spawn(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_task_spawn_core(_0: LeanObj, _1: c_uint, _2: bool) callconv(.c) LeanObj;
pub extern fn lean_thunk_get(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_thunk_get_core(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_thunk_get_own(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_thunk_pure(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_to_array(_0: LeanObj) callconv(.c) ?*anyopaque;
pub extern fn lean_to_closure(_0: LeanObj) callconv(.c) ?*anyopaque;
pub extern fn lean_to_ctor(_0: LeanObj) callconv(.c) ?*anyopaque;
pub extern fn lean_to_external(_0: LeanObj) callconv(.c) ?*anyopaque;
pub extern fn lean_to_promise(_0: LeanObj) callconv(.c) ?*anyopaque;
pub extern fn lean_to_ref(_0: LeanObj) callconv(.c) ?*anyopaque;
pub extern fn lean_to_sarray(_0: LeanObj) callconv(.c) ?*anyopaque;
pub extern fn lean_to_string(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_to_task(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_to_thunk(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_uint16_add(_0: u16, _1: u16) callconv(.c) u16;
pub extern fn lean_uint16_complement(_0: u16) callconv(.c) u16;
pub extern fn lean_uint16_dec_eq(_0: u16, _1: u16) callconv(.c) u8;
pub extern fn lean_uint16_dec_le(_0: u16, _1: u16) callconv(.c) u8;
pub extern fn lean_uint16_dec_lt(_0: u16, _1: u16) callconv(.c) u8;
pub extern fn lean_uint16_div(_0: u16, _1: u16) callconv(.c) u16;
pub extern fn lean_uint16_land(_0: u16, _1: u16) callconv(.c) u16;
pub extern fn lean_uint16_log2(_0: u16) callconv(.c) u16;
pub extern fn lean_uint16_lor(_0: u16, _1: u16) callconv(.c) u16;
pub extern fn lean_uint16_mod(_0: u16, _1: u16) callconv(.c) u16;
pub extern fn lean_uint16_mul(_0: u16, _1: u16) callconv(.c) u16;
pub extern fn lean_uint16_neg(_0: u16) callconv(.c) u16;
pub extern fn lean_uint16_of_big_nat(_0: LeanObj) callconv(.c) u16;
pub extern fn lean_uint16_of_nat(_0: LeanObj) callconv(.c) u16;
pub extern fn lean_uint16_of_nat_mk(_0: LeanObj) callconv(.c) u16;
pub extern fn lean_uint16_once_cold(_0: *u16, _1: *lean_once_cell_t, _2: *const fn () callconv(.c) u16) callconv(.c) u16;
pub extern fn lean_uint16_shift_left(_0: u16, _1: u16) callconv(.c) u16;
pub extern fn lean_uint16_shift_right(_0: u16, _1: u16) callconv(.c) u16;
pub extern fn lean_uint16_sub(_0: u16, _1: u16) callconv(.c) u16;
pub extern fn lean_uint16_to_float(_0: u16) callconv(.c) f64;
pub extern fn lean_uint16_to_float32(_0: u16) callconv(.c) f32;
pub extern fn lean_uint16_to_nat(_0: u16) callconv(.c) LeanObj;
pub extern fn lean_uint16_to_uint32(_0: u16) callconv(.c) u32;
pub extern fn lean_uint16_to_uint64(_0: u16) callconv(.c) u64;
pub extern fn lean_uint16_to_uint8(_0: u16) callconv(.c) u8;
pub extern fn lean_uint16_to_usize(_0: u16) callconv(.c) usize;
pub extern fn lean_uint16_xor(_0: u16, _1: u16) callconv(.c) u16;
pub extern fn lean_uint32_complement(_0: u32) callconv(.c) u32;
pub extern fn lean_uint32_div(_0: u32, _1: u32) callconv(.c) u32;
pub extern fn lean_uint32_land(_0: u32, _1: u32) callconv(.c) u32;
pub extern fn lean_uint32_log2(_0: u32) callconv(.c) u32;
pub extern fn lean_uint32_mod(_0: u32, _1: u32) callconv(.c) u32;
pub extern fn lean_uint32_mul(_0: u32, _1: u32) callconv(.c) u32;
pub extern fn lean_uint32_neg(_0: u32) callconv(.c) u32;
pub extern fn lean_uint32_of_nat_mk(_0: LeanObj) callconv(.c) u32;
pub extern fn lean_uint32_once_cold(_0: *u32, _1: *lean_once_cell_t, _2: *const fn () callconv(.c) u32) callconv(.c) u32;
pub extern fn lean_uint32_shift_right(_0: u32, _1: u32) callconv(.c) u32;
pub extern fn lean_uint32_sub(_0: u32, _1: u32) callconv(.c) u32;
pub extern fn lean_uint32_to_float(_0: u32) callconv(.c) f64;
pub extern fn lean_uint32_to_float32(_0: u32) callconv(.c) f32;
pub extern fn lean_uint32_to_uint16(_0: u32) callconv(.c) u16;
pub extern fn lean_uint32_to_uint64(_0: u32) callconv(.c) u64;
pub extern fn lean_uint32_to_uint8(_0: u32) callconv(.c) u8;
pub extern fn lean_uint32_to_usize(_0: u32) callconv(.c) usize;
pub extern fn lean_uint32_xor(_0: u32, _1: u32) callconv(.c) u32;
pub extern fn lean_uint64_add(_0: u64, _1: u64) callconv(.c) u64;
pub extern fn lean_uint64_complement(_0: u64) callconv(.c) u64;
pub extern fn lean_uint64_dec_eq(_0: u64, _1: u64) callconv(.c) u8;
